# internal/api/v1/docs/swagger.json
@@ -1104,6 +1104,51 @@
         "operationId": "categories"
       }
     },
+    "/homepage/item_click": {
+      "post": {
+        "description": "Increment item click.",
+        "consumes": [
+          "application/json"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "tags": [
+          "homepage"
+        ],
+        "summary": "Increment item click",
+        "parameters": [
+          {
+            "type": "string",
+            "name": "which",
+            "in": "query",
+            "required": true
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "$ref": "#/definitions/SuccessResponse"
+            }
+          },
+          "400": {
+            "description": "Bad Request",
+            "schema": {
+              "$ref": "#/definitions/ErrorResponse"
+            }
+          },
+          "500": {
+            "description": "Internal Server Error",
+            "schema": {
+              "$ref": "#/definitions/ErrorResponse"
+            }
+          }
+        },
+        "x-id": "item-click",
+        "operationId": "item-click"
+      }
+    },
     "/homepage/items": {
       "get": {
         "description": "Homepage items",
@@ -2176,13 +2221,13 @@
           "x-nullable": false,
           "x-omitempty": false
         },
-        "is_nerdctl": {
-          "type": "boolean",
+        "name": {
+          "type": "string",
           "x-nullable": false,
           "x-omitempty": false
         },
-        "name": {
-          "type": "string",
+        "runtime": {
+          "$ref": "#/definitions/agent.ContainerRuntime",
           "x-nullable": false,
           "x-omitempty": false
         },
@@ -2798,6 +2843,11 @@
         },
         "category": {
           "type": "string",
+          "x-nullable": false,
+          "x-omitempty": false
+        },
+        "clicks": {
+          "type": "integer",
           "x-nullable": false,
           "x-omitempty": false
         },
